# cofit-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
dependencies/: auth.py
migrations/: env.py
src/: main.py
src/core/: config.py  security.py
src/core/db/: session.py
src/models/: __init__.py  diary.py  exercise.py  training.py  training_exercise.py  user.py
src/routers/: auth.py  diary.py  exercises.py  trainings.py  users.py
src/schemas/: diary.py  exercise.py  training.py  user.py
